# ai-grader

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  launch_gui.py  plan.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: guard-destructive.sh  lint-on-save.sh
.github/: copilot-instructions.md  mcp-servers.json
.superpowers/brainstorm/405-1776225116/: .events  .server-stopped  layout.html
.superpowers/brainstorm/628-1776224854/: .server-stopped  layout.html
ai_grader/: cli.py  exporter.py  grader.py  gui.py  launcher.py  scheme_parser.py  submission_loader.py
ai_grader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai_grader/templates/: index.html
docs/: _config.yml  index.md
examples/: README.md  sample_scheme.md
mcp_servers/: README.md  __init__.py  ollama_server.py  start-mcp-servers.ps1  start-mcp-servers.sh
mcp_servers/playwright/: .gitignore  README.md  TESTING.md  package-lock.json  package.json
mcp_servers/playwright/src/: index.ts
output/: marks.csv  marks.xlsx
release/windows/: ai-grader-gui.spec
scripts/: build-windows.bat  build-windows.ps1
tests/: conftest.py  test_cli_integration.py  test_exporter.py  test_grader.py  test_gui.py  test_scheme_parser.py  test_submission_loader.py
