[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-grader"
version = "0.1.0"
description = "Local AI grading assistant for teachers — runs 100% on your machine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Copilot", email = "223556219+Copilot@users.noreply.github.com" }
]
keywords = ["education", "grading", "marking", "ollama", "ai", "llm"]
dependencies = [
    "pymupdf",
    "ollama",
    "openpyxl",
    "click",
    "markitdown",
]

[project.scripts]
ai-grader = "ai_grader.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_grader*"]
