[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-grader"
version = "0.2.1"
description = "Local AI grading assistant for teachers — runs 100% on your machine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Copilot", email = "223556219+Copilot@users.noreply.github.com" }
]
keywords = ["education", "grading", "marking", "ollama", "ai", "llm"]
dependencies = [
    "pymupdf",
    "ollama",
    "openpyxl",
    "click",
    "markitdown",
    "flask",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
]
release = [
    "pyinstaller>=6,<7",
]

[project.scripts]
ai-grader = "ai_grader.cli:main"
ai-grader-gui = "ai_grader.launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_grader*"]

[tool.setuptools.package-data]
ai_grader = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
